# nuke-ms

./: .gitignore  .gitmodules  CHANGES  CMakeLists.txt  INSTALL  Makefile  README.de.txt  README.en.txt
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL.de.txt  INSTALL.en.txt  README.de.txt  README.en.txt  coding_conventions.txt  coding_style.txt  crtp.cpp  goals.txt  ideas.txt  nuke-ms-goals.txt  release-notes.txt  sc_test.cpp
include/: CMakeLists.txt  bytes.hpp  msglayer.hpp  neartypes.hpp  refcounter.hpp
include/clientnode/: clientnode.hpp  logstreams.hpp  sigtypes.hpp  statemachine.hpp
include/servnode/: connected-client.hpp
make/: config.mak  global.mak
src/: CMakeLists.txt  Makefile  bytes.hpp  commands.hpp  control.cpp  control.hpp  gui.cpp  gui.hpp  helloworld_asio.cpp  main.cpp  main.hpp  msglayers.hpp  nms  notifications.hpp  protocol.cpp  protocol.hpp
src/boostasio-impl/: CMakeLists.txt  boostasio_impl.cpp
src/client/: CMakeLists.txt  Makefile  main.cpp
src/client-wx/: CMakeLists.txt  gui.cpp  gui.hpp  main.cpp
src/client/control/: commands.hpp  control.hpp  notifications.hpp  sigtypes.hpp
src/client/gui/: gui.cpp  gui.hpp
src/client/protocol/: errors.hpp  protocol.cpp  protocol.hpp  sigtypes.hpp  statemachine.cpp  statemachine.hpp
src/clientnode/: CMakeLists.txt  clientnode.cpp  clientnode.hpp  errors.hpp  protocol.cpp  protocol.hpp  sigtypes.hpp  statemachine.cpp  statemachine.hpp
src/common/: CMakeLists.txt  Makefile  bytes.hpp  msglayer.cpp  msglayer.hpp  neartypes.cpp  neartypes.hpp  refcounter.hpp
src/control/: control.hpp  notifications.hpp
src/gui/: gui.cpp  gui.hpp
src/protocol/: connection.cpp  connection.hpp  msglayer.cpp  msglayer.hpp  protocol.cpp  protocol.hpp  statemachine.cpp  statemachine.hpp
src/py-client/: client.py
src/server/: CMakeLists.txt  Makefile  dispatcher.cpp  dispatcher.hpp  main.cpp  remotepeer.cpp  remotepeer.hpp  servevent.hpp
src/servnode/: CMakeLists.txt  connected-client.cpp
src/test/: CMakeLists.txt  Makefile  byteprinter.cpp  byteprinter.hpp  testbyteorder.cpp  testmsglayer.cpp  testownership.cpp  testsegmlayer.cpp  teststringwrap.cpp
test/: CMakeLists.txt  testutils.hpp
test/common/: CMakeLists.txt  byteprinter.cpp  byteprinter.hpp  test_byteorder.cpp  test_neartypes.cpp  test_ownership.cpp  test_packedstruct.cpp  test_segmentationlayer.cpp  test_stringwraplayer.cpp  testmsglayer.cpp
test/servnode/: CMakeLists.txt  test_connected-client.cpp
